--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "bookshelf": "^0.7.9",
     "express": "^4.12.3",
     "knex": "^0.7.6",
-    "pg": "^4.3.0"
+    "pg": "^4.3.0",
+    "supertest": "^0.15.0"
   },
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "supertest": "^0.15.0"
   }
 }
