--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,9 @@
   "dependencies": {
     "body-parser": "^1.12.2",
     "bookshelf": "^0.7.9",
+    "crypto-js": "^3.1.4",
     "express": "^4.12.3",
+    "jsonwebtoken": "^5.0.0",
     "knex": "^0.7.6",
     "pg": "^4.3.0"
   },
