--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "node_modules/jasmine-node/bin/jasmine-node tests/users/* --autotest --color",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -37,5 +37,8 @@
   "devDependencies": {
     "jasmine-node": "^1.14.5",
     "supertest": "^0.15.0"
+  },
+  "engines": {
+    "node": "0.12.x"
   }
 }
